--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -27,12 +27,12 @@
             <div data-cell-index="8" class="cell"></div>
         </div>
     </section>
-<p class="smallText">the end is near the end is near the end is near the end is near  the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near </p>
+<p class="smallText">the end is near the end is near the end is near the end is near  the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end is near the end  </p>
 <img src="./whatYouDread.jpg" class="what">
     <img src="./iKnowWhatYouFear.jpg" class="know">
 <img src="./easports.jpg" class="ea">
 <p class="smallText">
-    nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is 
+    nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth the risk nothing is worth 
 </p>
     <script src="script.js"></script>
 </body>
